force-app/main/default/objects/Mass_Email_Log__c/Mass_Email_Log__c.object-meta.xml
<CustomObject>
    <!---->
    <label>Mass Email Log</label>
    <nameField>
        <label>Mass Email Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mass Email Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>