force-app/main/default/objects/Mass_Email_Log__c/fields/Email_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_ID__c</fullName>
    <label>Email Template ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>