force-app/main/default/objects/Mass_Email_Log__c/fields/Emails_Sent__c.field-meta.xml
<CustomField>
    <fullName>Emails_Sent__c</fullName>
    <label>Emails Sent</label>
    <summaryFilterItems>
        <field>Mass_Email_Log_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Success</value>
    </summaryFilterItems>
    <summaryForeignKey>Mass_Email_Log_Item__c.Mass_Email_Log__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>