force-app/main/default/objects/Mass_Email_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Email_Template_ID__c</columns>
    <columns>Emails_Sent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>